--- a/style.css
+++ b/style.css
@@ -15,8 +15,7 @@
 .stanleephoto {
   border: 5px solid rebeccapurple;
   display: inline-block;
-  height: 20vh;
-  width: ;
+  width: 100%;
   text-align: center;
 }
 
@@ -25,6 +24,7 @@ h1 {
   font-size: xx-large;
 }
 .stanleephoto img {
-  max-width: 100%;
-  height: auto;
+  max-width: 20vw;
+  height: 15vw;
+  border-radius: 20px;
 }
