--- a/style.css
+++ b/style.css
@@ -7,16 +7,20 @@
 .container {
   width: 100%;
   height: 100vh;
+  background-color: rgb(20, 1, 1, 0.5);
+  padding-left: 150px;
+  padding-right: 150px;
 }
 
 .header {
+  padding-top: -150px;
 }
 
 .stanleephoto {
   display: inline-block;
   width: 100%;
   text-align: center;
-  margin-top: 60px;
+  margin-bottom: 40px;
 }
 
 h1 {
@@ -24,15 +28,49 @@ h1 {
   font-family: "Lobster", sans-serif;
   font-weight: 400;
   font-style: normal;
-  margin-top: 30px;
   font-size: 50px;
+  padding-top: 30px;
 }
 .stanleephoto img {
-  max-width: 20vw;
-  height: 15vw;
+  max-width: 15vw;
+  height: 10vw;
   border-radius: 20px;
+  box-shadow: red 5px 5px 500px;
 }
 
-span {
+.header span {
+  color: red;
+}
+
+.main {
+}
+
+.main p {
+  text-align: center;
+}
+
+h3 {
+  font-family: "Lobster", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 20px;
+  color: brown;
+}
+
+footer {
+  text-align: center;
+  text-decoration: none;
+}
+
+.footer span {
+  background-color: black;
+  font-size: xx-large;
+  border: 2px solid rgb(208, 247, 67);
+  display: inline-block;
+  text-decoration: none;
+}
+
+a:hover {
+  background-color: gray;
   color: red;
 }
